:art: Rework main area to ensure alignment of panel columns

--- a/styles.css
+++ b/styles.css
@@ -148,82 +148,76 @@ body {
 }
 
 #main {
-    display: grid;
-    grid-template-columns: 5fr 2fr;
-    color: var(--dark-blue);
-    padding: 1rem;
-    background-color: var(--very-light-gray);
-    gap: 2rem;
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  grid-template-rows: 1fr 1fr;
+  color: var(--dark-blue);
+  gap: 2rem;
+  background-color: var(--very-light-gray);
+  padding: 1rem;
 }
 
-#main h2 {
-  font-size: 2rem;
+#projects {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  display: flex;
+  flex-direction: column;
 }
 
-#main #projects {
-  display:grid;
+#projects .container {
+  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  gap: 2rem;
+  gap: 1rem;
+  height: 100%;
 }
 
-#projects .project {
-  background-color: #fff;
-  border-radius: 10px;
+#projects .container .project {
+  background-color: white;
   padding: 1rem;
-  border-left: 10px solid var(--medium-blue);
-  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  border-left: 10px solid var(--light-blue);
+}
+
+#announcements {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  display: flex;
+  flex-direction: column;
+}
+
+#announcements .container {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  height: 100%;
+}
+
+.project {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 2em 10em 2em;
+  grid-template-rows: 2em 1fr 2em;
 }
 
-#projects .project p {
-  overflow: hidden;
-}
-
-.share {
+.project .icons {
   display: flex;
   justify-content: end;
-  gap: 0.5rem;
-}
-.share img {
-  height: 2rem;
 }
 
-#headline h2 {
-  margin-bottom: 1rem;
+.project .icons img {
+  width: 2rem;
 }
 
-#announcements h2 {
-  margin-bottom: 1rem;
+#leaders {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: flex;
+  flex-direction: column;
 }
 
-#announcements #panel {
-  background-color: var(--white);
+#leaders .container {
+  background-color: white;
   padding: 1rem;
   border-radius: 0.5rem;
-  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.1);
-  margin-bottom: 2rem;
-}
-
-.announcement:not(:last-child) {
-  padding-bottom: 1rem;
-  border-bottom: 1px var(--very-light-gray) solid;
-  margin-bottom: 1rem;
-}
-
-#trending #trending-panel {
-  background-color: var(--white);
-  padding: 1rem;
-  border-radius: 0.5rem;
-  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 700px) {
-  #main #projects {
-    display:grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
-  }
+  height: 100%
 }
